2008-05-21  Stefan Kost  <ensonic@users.sf.net>

	* gst/avi/gstavimux.c:
	  Also support alaw/mulaw.

2008-05-21  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/udp/gstmultiudpsink.c: (gst_multiudpsink_class_init),
	(gst_multiudpsink_setup_qos_dscp), (gst_multiudpsink_add_internal):
	* gst/udp/gstmultiudpsink.h:
	Add a fixme for the auto-multicast property.
	Fix some confusing debug messages.
	Disable setting a qos value by default.

2008-05-21  Wim Taymans  <wim.taymans@collabora.co.uk>

	Patch by: Gustaf Räntilä <g dot rantila at gmail dot com>

	* gst/udp/gstmultiudpsink.c: (gst_multiudpsink_render):
	Ignore EPERM errors from sendto. Fixes #533619.

2008-05-21  Wim Taymans  <wim.taymans@collabora.co.uk>

	Patch by: Henrik Eriksson <henriken at axis dot com>

	* gst/udp/gstmultiudpsink.c: (gst_multiudpsink_class_init),
	(gst_multiudpsink_init), (gst_multiudpsink_setup_qos_dscp),
	(gst_multiudpsink_set_property), (gst_multiudpsink_get_property),
	(gst_multiudpsink_init_send), (gst_multiudpsink_add_internal):
	* gst/udp/gstmultiudpsink.h:
	Add qos-dscp property to manage the Quality of service. Fixes #469917.

2008-05-21  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/rtp/gstrtptheoradepay.c: (gst_rtp_theora_depay_process):
	Improve debugging of the ident.

2008-05-21  Wim Taymans  <wim.taymans@collabora.co.uk>

	Patch by: Bruno Santos <brunof at ua dot pt>

	* gst/udp/gstudpnetutils.c: (gst_udp_get_addr),
	(gst_udp_join_group), (gst_udp_leave_group),
	(gst_udp_is_multicast):
	* gst/udp/gstudpnetutils.h:
	Provide a bunch of helper methods to deal with IPv4 and IPv6
	transparently.

	* gst/udp/gstmultiudpsink.c: (gst_multiudpsink_class_init),
	(gst_multiudpsink_init), (gst_multiudpsink_set_property),
	(gst_multiudpsink_get_property), (join_multicast),
	(gst_multiudpsink_init_send), (gst_multiudpsink_add_internal),
	(gst_multiudpsink_remove):
	* gst/udp/gstmultiudpsink.h:
	Add multicast TTL and loopback properties.